# ais-pipelines

./: .gitignore  README.md  SETUP.md  assistant_instructions.md  databricks.yml  pyproject.toml
config/: config.yaml
deployment/: job_config.json
notebooks/: data_quality_tutorial.py  salish_sea_deep_dive.ipynb  viz_h3_agg.py
notebooks/utils/: reader.py
src/: __init__.py
src/ais_pipelines/: autoloader.py  decompress.py  download_ais.py  dripper.py
src/ais_pipelines/config/: config.yaml
