[project]
name = "ais-pipelines"
version = "0.1.0"
description = "AIS data pipelines for Databricks"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "folium>=0.20.0",
    "requests",
    "ruff>=0.14.1",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]

[project.scripts]
download-ais = "ais_pipelines.download_ais:main"
dripper = "ais_pipelines.dripper:main"
autoloader = "ais_pipelines.autoloader:main"
decompress = "ais_pipelines.decompress:main"
